Second stage cleaning completed

--- a/ETL/load.ipynb
+++ b/ETL/load.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/10/26 15:42:34 WARN Utils: Your hostname, kushal-Latitude-E5440 resolves to a loopback address: 127.0.1.1; using 192.168.1.88 instead (on interface wlp2s0)\n",
-      "23/10/26 15:42:34 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "23/10/26 15:42:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "23/10/27 09:35:12 WARN Utils: Your hostname, kushal-Latitude-E5440 resolves to a loopback address: 127.0.1.1; using 192.168.1.88 instead (on interface wlp2s0)\n",
+      "23/10/27 09:35:12 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/10/27 09:35:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/10/27 09:35:15 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,16 +58,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -106,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +109,7 @@
        "DataFrame[Job Id: string, Experience: string, Qualifications: string, Salary Range: string, location: string, Country: string, latitude: string, longitude: string, Work Type: string, Company Size: string, Job Posting Date: string, Preference: string, Contact Person: string, Contact: string, Job Title: string, Role: string, Job Portal: string, Job Description: string, Benefits: string, skills: string, Responsibilities: string, Company: string, Company Profile: string]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -208,17 +202,17 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- Job Id: string (nullable = true)\n",
+      " |-- Job Id: long (nullable = true)\n",
       " |-- Experience: string (nullable = true)\n",
       " |-- Qualifications: string (nullable = true)\n",
       " |-- Salary Range: string (nullable = true)\n",
       " |-- location: string (nullable = true)\n",
       " |-- Country: string (nullable = true)\n",
-      " |-- latitude: string (nullable = true)\n",
-      " |-- longitude: string (nullable = true)\n",
+      " |-- latitude: float (nullable = true)\n",
+      " |-- longitude: float (nullable = true)\n",
       " |-- Work Type: string (nullable = true)\n",
-      " |-- Company Size: string (nullable = true)\n",
-      " |-- Job Posting Date: string (nullable = true)\n",
+      " |-- Company Size: integer (nullable = true)\n",
+      " |-- Job Posting Date: date (nullable = true)\n",
       " |-- Preference: string (nullable = true)\n",
       " |-- Job Title: string (nullable = true)\n",
       " |-- Role: string (nullable = true)\n",
@@ -237,58 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 5:====================================================>    (12 + 1) / 13]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1615940\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.distinct().count())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1615940\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.count())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.types import LongType, FloatType, IntegerType, DateType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.withColumn(\"Job Id\", df[\"Job Id\"].cast(LongType()))\\\n",
+    "        .withColumn(\"latitude\", df[\"latitude\"].cast(FloatType()))\\\n",
+    "         .withColumn(\"longitude\", df[\"longitude\"].cast(FloatType()))\\\n",
+    "          .withColumn(\"Company Size\", df[\"Company Size\"].cast(IntegerType()))\\\n",
+    "           .withColumn(\"Job Posting Date\", df[\"Job Posting Date\"].cast(DateType()))"
+   ]
   }
  ],
  "metadata": {
