error handling added

--- a/ETL/etl.ipynb
+++ b/ETL/etl.ipynb
@@ -29,40 +29,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract(spark):\n",
-    "        \n",
-    "    #csv path\n",
-    "    csv = config['csv']['path']\n",
-    "    #Read raw_data\n",
-    "    df = spark.read.csv(csv, header=True, inferSchema=False)\n",
-    "    return df\n"
+    "def extract():\n",
+    "    try:\n",
+    "        # CSV path\n",
+    "        csv = config['csv']['path']\n",
+    "        # Read raw_data\n",
+    "        df = spark.read.csv(csv, header=True, inferSchema=False)\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        raise Exception(f\"An error occurred during data extraction: {str(e)}\")\n",
+    "        spark.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean(spark):\n",
-    "    df=extract(spark)\n",
-    "    #changing -ve company size to positive\n",
-    "    df = df.withColumn(\"Company Size\", F.when(F.col(\"Company Size\") < 0, -F.col(\"Company Size\")).otherwise(F.col(\"Company Size\")))\n",
-    "    #List of columns to drop \n",
-    "    dropped = [\"Contact Person\", \"Contact\", \"Benefits\",\"Company Profile\"]\n",
-    "    #Drop column\n",
-    "    df = df.drop(*dropped)\n",
-    "    #changing to standard datatype\n",
-    "    df = df.withColumn(\"Job Id\", df[\"Job Id\"].cast(LongType()))\\\n",
-    "        .withColumn(\"latitude\", df[\"latitude\"].cast(FloatType()))\\\n",
-    "         .withColumn(\"longitude\", df[\"longitude\"].cast(FloatType()))\\\n",
-    "          .withColumn(\"Company Size\", df[\"Company Size\"].cast(IntegerType()))\\\n",
-    "           .withColumn(\"Job Posting Date\", df[\"Job Posting Date\"].cast(DateType()))\n",
-    "    return df\n"
+    "def clean():\n",
+    "    try:\n",
+    "        df = extract()\n",
+    "        # Changing -ve company size to positive\n",
+    "        df = df.withColumn(\"Company Size\", F.when(F.col(\"Company Size\") < 0, -F.col(\"Company Size\")).otherwise(F.col(\"Company Size\")))\n",
+    "        \n",
+    "        # List of columns to drop\n",
+    "        dropped = [\"Contact Person\", \"Contact\", \"Benefits\", \"Company Profile\"]\n",
+    "        # Drop columns\n",
+    "        df = df.drop(*dropped)\n",
+    "        \n",
+    "        # Changing to standard data types\n",
+    "        df = df.withColumn(\"Job Id\", df[\"Job Id\"].cast(LongType()))\\\n",
+    "               .withColumn(\"latitude\", df[\"latitude\"].cast(FloatType()))\\\n",
+    "               .withColumn(\"longitude\", df[\"longitude\"].cast(FloatType()))\\\n",
+    "               .withColumn(\"Company Size\", df[\"Company Size\"].cast(IntegerType()))\\\n",
+    "               .withColumn(\"Job Posting Date\", df[\"Job Posting Date\"].cast(DateType()))\n",
+    "        \n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        raise Exception(f\"An error occurred during data cleaning: {str(e)}\")\n",
+    "        spark.stop()"
    ]
   },
   {
@@ -86,58 +96,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def transform():\n",
-    "    df=extract()\n",
-    "    calculate_average_udf = F.udf(calculate_average)\n",
-    "    # Add a new column with the calculated average\n",
-    "    new_df = df.withColumn(\"Average\", calculate_average_udf(df[\"Salary Range\"]))\n",
-    "    new_df.withColumnRenamed(\"Average\",\"Average Salary\").printSchema()\n",
-    "    return new_df"
+    "    try:\n",
+    "        df=clean()\n",
+    "        calculate_average_udf = F.udf(calculate_average)\n",
+    "        # Add a new column with the calculated average\n",
+    "        new_df = df.withColumn(\"Average\", calculate_average_udf(df[\"Salary Range\"]))\n",
+    "        new_df.withColumnRenamed(\"Average\",\"Average Salary\").printSchema()\n",
+    "        return new_df\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        raise Exception(f\"An error occurred during data transformation: {str(e)}\")\n",
+    "        spark.stop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load():\n",
-    "    new_df=transform()\n",
-    "    ##Load the clean data in postgres\n",
-    "    new_df.write.format('jdbc').options(url=config['postgres']['url'],driver = config['postgres']['driver'], dbtable = config['postgres']['dbtable'], user=config['postgres']['user'],password=config['postgres']['password']).mode('overwrite').save()\n",
-    "    return new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/10/31 15:09:47 INFO FileSourceStrategy: Pushed Filters: \n",
-      "23/10/31 15:09:47 INFO FileSourceStrategy: Post-Scan Filters: \n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[Job Id: bigint, experience: string, qualifications: string, Salary Range: string, location: string, country: string, latitude: float, longitude: float, Work Type: string, Company Size: int, Job Posting Date: date, preference: string, Job Title: string, Role: string, Job Portal: string, Job Description: string, skills: string, responsibilities: string, company: string]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.persist()"
+    "    try:\n",
+    "        new_df=transform()\n",
+    "        ##Load the clean data in postgres\n",
+    "        new_df.write.format('jdbc').options(url=config['postgres']['url'],driver = config['postgres']['driver'], dbtable = config['postgres']['dbtable'], user=config['postgres']['user'],password=config['postgres']['password']).mode('overwrite').save()\n",
+    "        return new_df\n",
+    "    except Exception as e:\n",
+    "        raise Exception(f\"An error occurred during loading the data: {str(e)}\")\n",
+    "        spark.stop()    \n"
    ]
   }
  ],
