Commiting additional transformations on the new df

--- a/ETL/etl.ipynb
+++ b/ETL/etl.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/11/01 12:17:53 WARN Utils: Your hostname, FM-PC-LT-176 resolves to a loopback address: 127.0.1.1; using 172.16.5.4 instead (on interface wlo1)\n",
+      "23/11/01 12:17:53 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/11/01 12:17:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import LongType, FloatType, IntegerType, DateType\n",
@@ -29,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +55,32 @@
     "    except Exception as e:\n",
     "        raise Exception(f\"An error occurred during data extraction: {str(e)}\")\n",
     "        spark.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------+-------------+--------------+------------+--------+---------------+--------+---------+---------+------------+----------------+----------+--------------+----------------+--------------------+--------------------+-------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "|         Job Id|   experience|qualifications|Salary Range|location|        country|latitude|longitude|Work Type|Company Size|Job Posting Date|preference|Contact Person|         contact|           Job Title|                Role|         Job Portal|     Job Description|            benefits|              skills|    responsibilities|             company|     Company Profile|\n",
+      "+---------------+-------------+--------------+------------+--------+---------------+--------+---------+---------+------------+----------------+----------+--------------+----------------+--------------------+--------------------+-------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "|750556001849337|1 to 15 Years|           MBA|   $61K-$85K|    Suva|           Fiji|-17.7134|  178.065| Contract|      116756|      2022-02-11|      Male|  Holly Torres|    654-728-2209| Front-End Developer|     UI/UX Developer|             Indeed|A UI/UX Developer...|{'Legal Assistanc...|User interface (U...|Design and implem...|   Jackson Financial|\"{\"\"Sector\"\":\"\"Fi...|\n",
+      "| 35160975336498|1 to 13 Years|           BBA|  $56K-$101K|   Rabat|        Morocco| 31.7917|  -7.0926|   Intern|      -90543|      2022-04-30|      Both| Toni Sheppard|      4613544017|        Pediatrician|General Pediatrician|               Dice|General Pediatric...|{'Transportation ...|Pediatrics Pediat...|Provide primary h...|Erie Insurance Group|\"{\"\"Sector\"\":\"\"In...|\n",
+      "|226828850189486|3 to 12 Years|        B.Tech|   $61K-$97K| Bishkek|Kyrgyz Republic| 41.2044|  74.7661| Contract|       37286|      2021-10-23|    Female|     Rick Luna|420.386.5399x519|IT Support Specia...|IT Systems Admini...|Stack Overflow Jobs|IT Systems Admini...|{'Casual Dress Co...|Network administr...|Administer and ma...| Tata Communications|\"{\"\"Sector\"\":\"\"Te...|\n",
+      "+---------------+-------------+--------------+------------+--------+---------------+--------+---------+---------+------------+----------------+----------+--------------+----------------+--------------------+--------------------+-------------------+--------------------+--------------------+--------------------+--------------------+--------------------+--------------------+\n",
+      "only showing top 3 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=extract()\n",
+    "df.show(3)"
    ]
   },
   {
@@ -107,6 +145,41 @@
     "        # Add a new column with the calculated average\n",
     "        new_df = df.withColumn(\"Average\", calculate_average_udf(df[\"Salary Range\"]))\n",
     "        new_df.withColumnRenamed(\"Average\",\"Average Salary\").printSchema()\n",
+    "        \n",
+    "        # Changing gender preference from \"both\" to \"Male or Female\"\n",
+    "        new_df = new_df.withColumn(\"Preference\", when(col(\"Preference\") == \"Both\", \"Male or Female\").otherwise(col(\"Preference\")))\n",
+    "        new_df.show()\n",
+    "\n",
+    "        #Dividing companies into tiers according to the company size\n",
+    "\n",
+    "        quartiles = df.stat.approxQuantile(\"company size\", [0.25, 0.75], 0.0)\n",
+    "        q1, q3 = quartiles\n",
+    "        new_df = new_df.withColumn(\"CompanyTier\",\n",
+    "        when(col(\"company size\") <= q1, \"Tier-1 (Low)\")\n",
+    "        .when((col(\"company size\") > q1) & (col(\"company size\") <= q3), \"Tier-2 (Medium)\")\n",
+    "        .when(col(\"company size\") > q3, \"Tier-3 (High)\")\n",
+    "        .otherwise(\"Uncategorized\"))\n",
+    "\n",
+    "\n",
+    "        #Dividing jobs into three categories according to their salary.\n",
+    "        \n",
+    "        quartiles = df.stat.approxQuantile(\"salary\", [0.25, 0.75], 0.0)\n",
+    "        q1, q3 = quartiles\n",
+    "        updatedDF = df.withColumn(\"SalaryLevel\",\n",
+    "        when(col(\"salary\") <= q1, \"Low Pay\")\n",
+    "        .when((col(\"salary\") > q1) & (col(\"salary\") <= q3), \"Average Pay\")\n",
+    "        .when(col(\"salary\") > q3, \"High Pay\")\n",
+    "        .otherwise(\"Uncategorized\"))\n",
+    "        \n",
+    "\n",
+    "        # Differentiate qualifications according to their initials\n",
+    "\n",
+    "        new_df = new_df.withColumn(\"QualificationCategory\", when(col(\"Qualification\").startswith(\"M\"), \"Masters\")\n",
+    "        .when(col(\"Qualification\").startswith(\"B\"), \"Bachelors\")\n",
+    "        .when(col(\"Qualification\").startswith(\"P\"), \"PhD\")\n",
+    "        .otherwise(\"Uncategorized\"))\n",
+    "\n",
+    "\n",
     "        return new_df\n",
     "\n",
     "    except Exception as e:\n",
@@ -134,9 +207,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python (venv)",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
