--- a/ETL/etl.ipynb
+++ b/ETL/etl.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/11/02 17:41:29 WARN Utils: Your hostname, kushal-Latitude-E5440 resolves to a loopback address: 127.0.1.1; using 192.168.1.16 instead (on interface wlp2s0)\n",
+      "23/11/02 17:41:29 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/11/02 17:41:30 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.types import LongType, FloatType, IntegerType, DateType, MapType\n",
@@ -21,13 +33,13 @@
     "spark = SparkSession \\\n",
     "    .builder \\\n",
     "    .appName(\"final_project\") \\\n",
-    "    .config(\"spark.jars\", config['spark']['path']) \\\n",
+    "    .config(\"spark.jars\", config['spark'][\"path\"]) \\\n",
     "    .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,41 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------+-------------+--------------+------------+------------------+---------------+--------+---------+---------+------------+----------------+----------+--------------------+--------------------+-------------------+--------------------+--------------------+--------------------+--------------------+------------------+\n",
-      "|          Job Id|   experience|qualifications|Salary Range|          location|        country|latitude|longitude|Work Type|Company Size|Job Posting Date|preference|           Job Title|                Role|         Job Portal|     Job Description|              skills|    responsibilities|             company|            Sector|\n",
-      "+----------------+-------------+--------------+------------+------------------+---------------+--------+---------+---------+------------+----------------+----------+--------------------+--------------------+-------------------+--------------------+--------------------+--------------------+--------------------+------------------+\n",
-      "| 750556001849337|1 to 15 Years|           MBA|   $61K-$85K|              Suva|           Fiji|-17.7134|  178.065| Contract|      116756|      2022-02-11|      Male| Front-End Developer|     UI/UX Developer|             Indeed|A UI/UX Developer...|User interface (U...|Design and implem...|   Jackson Financial|Financial Services|\n",
-      "|  35160975336498|1 to 13 Years|           BBA|  $56K-$101K|             Rabat|        Morocco| 31.7917|  -7.0926|   Intern|       90543|      2022-04-30|      Both|        Pediatrician|General Pediatrician|               Dice|General Pediatric...|Pediatrics Pediat...|Provide primary h...|Erie Insurance Group|         Insurance|\n",
-      "| 226828850189486|3 to 12 Years|        B.Tech|   $61K-$97K|           Bishkek|Kyrgyz Republic| 41.2044|  74.7661| Contract|       37286|      2021-10-23|    Female|IT Support Specia...|IT Systems Admini...|Stack Overflow Jobs|IT Systems Admini...|Network administr...|Administer and ma...| Tata Communications|Telecommunications|\n",
-      "|2181795420055381|1 to 12 Years|        M.Tech|   $60K-$93K|        Porto-Novo|          Benin|  9.3077|   2.3158|Full-Time|       34863|      2022-02-21|      Both|    Registered Nurse|         Staff Nurse|        SimplyHired|A Staff Nurse pro...|Nursing care Pati...|Provide direct pa...|            Amphenol|       Electronics|\n",
-      "|1755044933676954|0 to 11 Years|           BCA|  $57K-$124K|           Tbilisi|        Georgia| 42.3154|  43.3569|Part-Time|       47150|      2021-11-08|    Female|Social Media Coor...|     Content Creator|    Internships.com|Create engaging a...|Content creation ...|Create compelling...|      Avery Dennison|        Industrial|\n",
-      "|1701938942801255|4 to 11 Years|         B.Com|  $62K-$102K|            Moscow|         Russia|  61.524| 105.3188| Contract|       15465|      2022-01-25|    Female|Customer Support ...|Customer Success ...|            USAJOBS|Customer Success ...|Customer relation...|Build and maintai...|Bristol-Myers Squibb|        Healthcare|\n",
-      "|1549187090001553| 4 to 9 Years|           PhD|  $58K-$124K|            Dodoma|       Tanzania|  -6.369|  34.8888|Temporary|       82468|      2023-01-16|    Female|Public Relations ...|Media Relations S...|            Monster|Media Relations S...|Media relations P...|Manage relationsh...|          Albertsons|            Retail|\n",
-      "|1985420468865688|3 to 15 Years|         M.Com|   $65K-$88K|          Brasilia|         Brazil| -14.235| -51.9253|   Intern|      100133|      2023-08-25|      Both|Market Research A...|   Market Researcher|               Dice|A Market Research...|Market research m...|Research market t...|   Burlington Stores|            Retail|\n",
-      "| 824108570821616| 4 to 8 Years|           BCA|  $64K-$113K|        Libreville|          Gabon| -0.8037|  11.6094|Full-Time|       81460|      2022-04-13|      Male|    Network Engineer|Network Security ...|        SimplyHired|Network Security ...|Network security ...|Focus on network ...| NGL Energy Partners|            Energy|\n",
-      "|2682227177958709|3 to 14 Years|           MBA|  $60K-$126K|City of Port Louis|      Mauritius|-20.3484|  57.5522|Part-Time|       40269|      2023-06-18|      Both|      HR Coordinator|Training Coordinator|           The Muse|Training Coordina...|Training program ...|Coordinate employ...|            AutoZone|  Automotive Parts|\n",
-      "+----------------+-------------+--------------+------------+------------------+---------------+--------+---------+---------+------------+----------------+----------+--------------------+--------------------+-------------------+--------------------+--------------------+--------------------+--------------------+------------------+\n",
-      "only showing top 10 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "dff=clean()\n",
-    "# dff.select('Sector').show(truncate=False)\n",
-    "dff.show(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -294,34 +272,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR:root:KeyboardInterrupt while sending command.==>              (3 + 1) / 4]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ubuntu/Desktop/final_project/venv/lib/python3.10/site-packages/py4j/java_gateway.py\", line 1038, in send_command\n",
-      "    response = connection.send_command(command)\n",
-      "  File \"/home/ubuntu/Desktop/final_project/venv/lib/python3.10/site-packages/py4j/clientserver.py\", line 511, in send_command\n",
-      "    answer = smart_decode(self.stream.readline()[:-1])\n",
-      "  File \"/usr/lib/python3.10/socket.py\", line 705, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "KeyboardInterrupt\n",
       "                                                                                \r"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m dff\u001b[39m=\u001b[39mtransform()\n\u001b[1;32m      2\u001b[0m dff\u001b[39m.\u001b[39mprintSchema()\n",
-      "Cell \u001b[0;32mIn[40], line 19\u001b[0m, in \u001b[0;36mtransform\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m new_df\u001b[39m.\u001b[39mshow()\n\u001b[1;32m     17\u001b[0m \u001b[39m#Dividing companies into tiers according to the company size\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m quartiles \u001b[39m=\u001b[39m new_df\u001b[39m.\u001b[39;49mstat\u001b[39m.\u001b[39;49mapproxQuantile(\u001b[39m\"\u001b[39;49m\u001b[39mcompany size\u001b[39;49m\u001b[39m\"\u001b[39;49m, [\u001b[39m0.25\u001b[39;49m, \u001b[39m0.75\u001b[39;49m], \u001b[39m0.0\u001b[39;49m)\n\u001b[1;32m     20\u001b[0m q1, q3 \u001b[39m=\u001b[39m quartiles\n\u001b[1;32m     21\u001b[0m new_df \u001b[39m=\u001b[39m new_df\u001b[39m.\u001b[39mwithColumn(\u001b[39m\"\u001b[39m\u001b[39mCompanyTier\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     22\u001b[0m F\u001b[39m.\u001b[39mwhen(F\u001b[39m.\u001b[39mcol(\u001b[39m\"\u001b[39m\u001b[39mcompany size\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m q1, \u001b[39m\"\u001b[39m\u001b[39mTier-1 (Low)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[39m.\u001b[39mwhen((F\u001b[39m.\u001b[39mcol(\u001b[39m\"\u001b[39m\u001b[39mcompany size\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m>\u001b[39m q1) \u001b[39m&\u001b[39m (F\u001b[39m.\u001b[39mcol(\u001b[39m\"\u001b[39m\u001b[39mcompany size\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m q3), \u001b[39m\"\u001b[39m\u001b[39mTier-2 (Medium)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     24\u001b[0m \u001b[39m.\u001b[39mwhen(F\u001b[39m.\u001b[39mcol(\u001b[39m\"\u001b[39m\u001b[39mcompany size\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39m>\u001b[39m q3, \u001b[39m\"\u001b[39m\u001b[39mTier-3 (High)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[39m.\u001b[39motherwise(\u001b[39m\"\u001b[39m\u001b[39mUncategorized\u001b[39m\u001b[39m\"\u001b[39m))\n",
-      "File \u001b[0;32m~/Desktop/final_project/venv/lib/python3.10/site-packages/pyspark/sql/dataframe.py:5916\u001b[0m, in \u001b[0;36mDataFrameStatFunctions.approxQuantile\u001b[0;34m(self, col, probabilities, relativeError)\u001b[0m\n\u001b[1;32m   5910\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mapproxQuantile\u001b[39m(\n\u001b[1;32m   5911\u001b[0m     \u001b[39mself\u001b[39m,\n\u001b[1;32m   5912\u001b[0m     col: Union[\u001b[39mstr\u001b[39m, List[\u001b[39mstr\u001b[39m], Tuple[\u001b[39mstr\u001b[39m]],\n\u001b[1;32m   5913\u001b[0m     probabilities: Union[List[\u001b[39mfloat\u001b[39m], Tuple[\u001b[39mfloat\u001b[39m]],\n\u001b[1;32m   5914\u001b[0m     relativeError: \u001b[39mfloat\u001b[39m,\n\u001b[1;32m   5915\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Union[List[\u001b[39mfloat\u001b[39m], List[List[\u001b[39mfloat\u001b[39m]]]:\n\u001b[0;32m-> 5916\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdf\u001b[39m.\u001b[39;49mapproxQuantile(col, probabilities, relativeError)\n",
-      "File \u001b[0;32m~/Desktop/final_project/venv/lib/python3.10/site-packages/pyspark/sql/dataframe.py:4841\u001b[0m, in \u001b[0;36mDataFrame.approxQuantile\u001b[0;34m(self, col, probabilities, relativeError)\u001b[0m\n\u001b[1;32m   4832\u001b[0m     \u001b[39mraise\u001b[39;00m PySparkValueError(\n\u001b[1;32m   4833\u001b[0m         error_class\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNEGATIVE_VALUE\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   4834\u001b[0m         message_parameters\u001b[39m=\u001b[39m{\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   4837\u001b[0m         },\n\u001b[1;32m   4838\u001b[0m     )\n\u001b[1;32m   4839\u001b[0m relativeError \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39m(relativeError)\n\u001b[0;32m-> 4841\u001b[0m jaq \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_jdf\u001b[39m.\u001b[39;49mstat()\u001b[39m.\u001b[39;49mapproxQuantile(col, probabilities, relativeError)\n\u001b[1;32m   4842\u001b[0m jaq_list \u001b[39m=\u001b[39m [\u001b[39mlist\u001b[39m(j) \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m jaq]\n\u001b[1;32m   4843\u001b[0m \u001b[39mreturn\u001b[39;00m jaq_list[\u001b[39m0\u001b[39m] \u001b[39mif\u001b[39;00m isStr \u001b[39melse\u001b[39;00m jaq_list\n",
-      "File \u001b[0;32m~/Desktop/final_project/venv/lib/python3.10/site-packages/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1314\u001b[0m args_command, temp_args \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_build_args(\u001b[39m*\u001b[39margs)\n\u001b[1;32m   1316\u001b[0m command \u001b[39m=\u001b[39m proto\u001b[39m.\u001b[39mCALL_COMMAND_NAME \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_header \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[39m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[39m.\u001b[39mEND_COMMAND_PART\n\u001b[0;32m-> 1321\u001b[0m answer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgateway_client\u001b[39m.\u001b[39;49msend_command(command)\n\u001b[1;32m   1322\u001b[0m return_value \u001b[39m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgateway_client, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtarget_id, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname)\n\u001b[1;32m   1325\u001b[0m \u001b[39mfor\u001b[39;00m temp_arg \u001b[39min\u001b[39;00m temp_args:\n",
-      "File \u001b[0;32m~/Desktop/final_project/venv/lib/python3.10/site-packages/py4j/java_gateway.py:1038\u001b[0m, in \u001b[0;36mGatewayClient.send_command\u001b[0;34m(self, command, retry, binary)\u001b[0m\n\u001b[1;32m   1036\u001b[0m connection \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_connection()\n\u001b[1;32m   1037\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 1038\u001b[0m     response \u001b[39m=\u001b[39m connection\u001b[39m.\u001b[39;49msend_command(command)\n\u001b[1;32m   1039\u001b[0m     \u001b[39mif\u001b[39;00m binary:\n\u001b[1;32m   1040\u001b[0m         \u001b[39mreturn\u001b[39;00m response, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_create_connection_guard(connection)\n",
-      "File \u001b[0;32m~/Desktop/final_project/venv/lib/python3.10/site-packages/py4j/clientserver.py:511\u001b[0m, in \u001b[0;36mClientServerConnection.send_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m    509\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m    510\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m--> 511\u001b[0m         answer \u001b[39m=\u001b[39m smart_decode(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstream\u001b[39m.\u001b[39;49mreadline()[:\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m])\n\u001b[1;32m    512\u001b[0m         logger\u001b[39m.\u001b[39mdebug(\u001b[39m\"\u001b[39m\u001b[39mAnswer received: \u001b[39m\u001b[39m{0}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(answer))\n\u001b[1;32m    513\u001b[0m         \u001b[39m# Happens when a the other end is dead. There might be an empty\u001b[39;00m\n\u001b[1;32m    514\u001b[0m         \u001b[39m# answer before the socket raises an error.\u001b[39;00m\n",
-      "File \u001b[0;32m/usr/lib/python3.10/socket.py:705\u001b[0m, in \u001b[0;36mSocketIO.readinto\u001b[0;34m(self, b)\u001b[0m\n\u001b[1;32m    703\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m    704\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 705\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sock\u001b[39m.\u001b[39;49mrecv_into(b)\n\u001b[1;32m    706\u001b[0m     \u001b[39mexcept\u001b[39;00m timeout:\n\u001b[1;32m    707\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_timeout_occurred \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- Job Id: long (nullable = true)\n",
+      " |-- experience: string (nullable = true)\n",
+      " |-- qualifications: string (nullable = true)\n",
+      " |-- Salary Range: string (nullable = true)\n",
+      " |-- location: string (nullable = true)\n",
+      " |-- country: string (nullable = true)\n",
+      " |-- latitude: float (nullable = true)\n",
+      " |-- longitude: float (nullable = true)\n",
+      " |-- Work Type: string (nullable = true)\n",
+      " |-- Company Size: integer (nullable = true)\n",
+      " |-- Job Posting Date: date (nullable = true)\n",
+      " |-- Preference: string (nullable = true)\n",
+      " |-- Job Title: string (nullable = true)\n",
+      " |-- Role: string (nullable = true)\n",
+      " |-- Job Portal: string (nullable = true)\n",
+      " |-- Job Description: string (nullable = true)\n",
+      " |-- skills: string (nullable = true)\n",
+      " |-- responsibilities: string (nullable = true)\n",
+      " |-- company: string (nullable = true)\n",
+      " |-- Average Salary: integer (nullable = true)\n",
+      " |-- CompanyTier: string (nullable = false)\n",
+      " |-- SalaryLevel: string (nullable = false)\n",
+      " |-- QualificationCategory: string (nullable = false)\n",
+      "\n"
      ]
     }
    ],
@@ -332,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,16 +331,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -404,7 +379,7 @@
        "DataFrame[Job Id: bigint, experience: string, qualifications: string, Salary Range: string, location: string, country: string, latitude: float, longitude: float, Work Type: string, Company Size: int, Job Posting Date: date, Preference: string, Job Title: string, Role: string, Job Portal: string, Job Description: string, skills: string, responsibilities: string, company: string, Sector: string, Average Salary: int, CompanyTier: string, SalaryLevel: string, QualificationCategory: string]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
